// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-from-url/instagram single reel Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "17881946546670638",
    "url": "https://www.instagram.com/reel/CiQKFvVKMfb/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single reel RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "assetId": "17950244213157265",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "18213091378088633",
    "url": "https://www.instagram.com/p/CiQKArFKp4E/",
  },
}
`;

exports[`social-media/upload-from-url/instagram single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "assetId": "17974427638683999",
  },
}
`;
